<resources>
    <string name="app_name">씨네마천국</string>

    <string name="TicketingRate">예매율</string>
    <string name="rating">평점</string>
    <string name="audience">누적관객수</string>

    <string name="content_title">줄거리</string>
    <string name="content">군도, 백성을 구하라!\n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. \n힘 없는 백성의 편이 되어
 세상을 바로잡고자 하는 의적떼인 \n군도(群盜), 지리산 추설이 있었다.\n\n쌍칼 도치 vs 백성의 적 조윤\n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 \n날로 피폐해 져 가는 사이,
 나주 대부호의 서자로 조선 \n최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈,\n삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 \n근근이 살아가던 천한 백정 돌무치는
 죽어도 잊지 못할 \n끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 \n巨星) 도치로 거듭난다.\n\n뭉치면 백성, 흩어지면 도적!\n망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 \n도치를 필두로 한 군도는 백성의 적,
 조윤과 한 판 승부를 \n시작하는데&#8230;</string>

    <string name="director_title">감독 / 출연</string>
    <string name="director"><b>감독</b> 윤종빈\n<b>출연</b> 하정우(도치), 강동원(조윤)</string>

    <string name="evaluation_title">한줄평</string>

    <string name="writing_title">작성하기</string>

    <string name="see_all_writing_content_bt">모두 보기</string>
    <string name="reservation_bt">예매하기</string>

    <string name="visibility">visible</string>


    <!--  activity_writing_comment  -->
    <string name="Enter_your_rating">평점을 입력해 주세요</string>
    <string name="write_your_comment">100자 이내로 작성해주세요.</string>
    <string name="save">저 장</string>
    <string name="cancel">취 소</string>

    <!--  item_comment_list  -->
    <string name="recommend">추천</string>
    <string name="report">신고하기</string>

    <!-- nav_header_main -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Mike</string>
    <string name="nav_header_subtitle">Mike.jung.global@gmail.com</string>

    <!-- activity_main_drawer -->
    <string name="movie_list">영화 목록</string>
    <string name="movie_API">영화 API</string>
    <string name="movie_book">예매하기</string>
    <string name="movie_details">영화 상세</string>
    <string name="comment_list">한줄평 목록</string>
    <string name="writing_comment">한줄평 작성</string>
    <string name="setting">설정</string>
    <string name="user_setting">사용자 설정</string>

    <!--    item_movie_list-->
    <string name="see_details">상세보기</string>
    <string name="book_rate">예매율</string>
    <string name="line">|</string>
</resources>
