<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/image2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="2. 공 조"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/underline"/>

    <View
        android:id="@+id/underline"
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_underline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/details_layout"/>

    <LinearLayout
        android:id="@+id/details_layout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_movie_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_rate"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginEnd="5dp"
            android:id="@+id/book_rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="61.6%"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginEnd="5dp"
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15세 관람가"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D-1"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_movie_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bt_details_shape"
        android:paddingStart="42dp"
        android:paddingTop="16dp"
        android:paddingEnd="42dp"
        android:paddingBottom="16dp"
        android:text="@string/see_details"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>